--- a/Build a Palindrome Checker Project/styles.css
+++ b/Build a Palindrome Checker Project/styles.css
@@ -1,4 +1,7 @@
-div {
-    height: 50px;
-    width: 100px;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+    border: 1px solid red;
 }
