--- a/Roman Numeral Converter/style.css
+++ b/Roman Numeral Converter/style.css
@@ -5,4 +5,17 @@
     text-align: center;
     display: block;
     justify-content: center;
+    border: 1px solid red;
+
+}
+
+h1 {
+    font-size: 24px;
+    color: red !important;
+
+}
+
+#output {
+    display: block;
+    background-color: blue;
 }
